--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Remy & Sonny Open World</title>
+    <title>Remy & Sonny - Touch Edition</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <style>
         body { margin: 0; padding: 0; overflow: hidden; background-color: #000; }
@@ -27,7 +27,7 @@
             scene: { preload: preload, create: create, update: update }
         };
 
-        let player, sonny, platforms, scoreText;
+        let player, sonny, platforms, boxes, scoreText;
         let score = 100, jumpCount = 0;
         let moveLeft = false, moveRight = false;
 
@@ -36,65 +36,68 @@
         function preload() {
             this.load.image('space', 'https://labs.phaser.io/assets/skies/space3.png');
             this.load.image('ground', 'https://labs.phaser.io/assets/sprites/platform.png');
+            this.load.image('box', 'https://labs.phaser.io/assets/sprites/block.png'); // صورة الصندوق
             this.load.image('remy', 'https://labs.phaser.io/assets/sprites/phaser-dude.png'); 
             this.load.image('sonny', 'https://labs.phaser.io/assets/sprites/ghost.png');
         }
 
         function create() {
-            // 1. جعل الخلفية ثابتة وتملأ الشاشة (ScrollFactor 0 يجعلها لا تتحرك مع اللاعب)
+            // خلفية ثابتة وملء الشاشة
             let bg = this.add.image(400, 300, 'space').setScrollFactor(0);
             bg.setDisplaySize(800, 600);
 
-            // 2. إنشاء عالم ممتد (مساحة المشي 100 ألف بكسل)
             this.physics.world.setBounds(0, 0, 100000, 600);
 
             platforms = this.physics.add.staticGroup();
-            // إنشاء أرضية طويلة جداً للمشي المستمر
+            boxes = this.physics.add.staticGroup();
+
+            // إنشاء الأرضية
             for (let i = 0; i < 100; i++) {
                 platforms.create(i * 1000, 580, 'ground').setDisplaySize(1000, 40).refreshBody();
             }
 
-            // 3. تكبير الشخصيات
+            // إضافة صناديق عشوائية بأماكن وارتفاعات مختلفة
+            for (let i = 1; i < 200; i++) {
+                let x = i * 400 + Math.random() * 200;
+                let y = 400 - Math.random() * 250;
+                boxes.create(x, y, 'box').setScale(0.8).refreshBody();
+            }
+
+            // الشخصيات
             player = this.physics.add.sprite(100, 450, 'remy').setScale(1.8);
             player.setCollideWorldBounds(true);
-
             sonny = this.add.sprite(100, 400, 'sonny').setScale(1.4);
 
-            // الكاميرا تتبع اللاعب
             this.cameras.main.startFollow(player, true, 0.1, 0.1);
             this.cameras.main.setBounds(0, 0, 100000, 600);
 
             scoreText = this.add.text(20, 20, 'Tokens: ' + score, { fontSize: '32px', fill: '#fff' }).setScrollFactor(0);
 
             this.physics.add.collider(player, platforms);
+            this.physics.add.collider(player, boxes);
 
-            // --- الأزرار الاحترافية الزرقاء في الأسفل (ثابتة على الشاشة) ---
-            const uiContainer = this.add.container(0, 0).setScrollFactor(0);
-
-            // زر اليسار الاحترافي
-            const leftBtn = this.add.circle(80, 520, 45, 0x0056b3, 0.8).setInteractive();
-            this.add.text(65, 500, '<', { fontSize: '40px', fill: '#fff' }).setScrollFactor(0);
-            leftBtn.on('pointerdown', () => moveLeft = true);
-            leftBtn.on('pointerup', () => moveLeft = false);
-
-            // زر اليمين الاحترافي
-            const rightBtn = this.add.circle(720, 520, 45, 0x0056b3, 0.8).setInteractive();
-            this.add.text(705, 500, '>', { fontSize: '40px', fill: '#fff' }).setScrollFactor(0);
-            rightBtn.on('pointerdown', () => moveRight = true);
-            rightBtn.on('pointerup', () => moveRight = false);
-
-            // زر القفز في المنتصف (تصميم كبسولة)
-            const jumpBtn = this.add.rectangle(400, 520, 160, 70, 0x00c853, 0.9).setInteractive();
-            this.add.text(360, 505, 'JUMP', { fontSize: '28px', fill: '#fff', fontStyle: 'bold' }).setScrollFactor(0);
-            
-            jumpBtn.on('pointerdown', () => {
-                if (player.body.touching.down) {
-                    jumpCount = 1;
-                    player.setVelocityY(-450);
-                } else if (jumpCount === 1) {
-                    jumpCount = 2;
-                    player.setVelocityY(-550);
+            // --- نظام التحكم باللمس (المناطق) ---
+            this.input.on('pointerdown', (pointer) => {
+                if (pointer.x < 250) { // منطقة اليسار
+                    moveLeft = true;
+                    moveRight = false;
+                } else if (pointer.x > 550) { // منطقة اليمين
+                    moveRight = true;
+                    moveLeft = false;
+                } else { // منطقة الوسط (القفز)
+                    if (player.body.touching.down) {
+                        jumpCount = 1;
+                        player.setVelocityY(-450);
+                    } else if (jumpCount === 1) {
+                        jumpCount = 2;
+                        player.setVelocityY(-550);
+                    }
                 }
+            });
+
+            this.input.on('pointerup', () => {
+                moveLeft = false;
+                moveRight = false;
             });
         }
 
@@ -103,7 +106,6 @@
             else if (moveRight) player.setVelocityX(250);
             else player.setVelocityX(0);
 
-            // سوني يتبع ريمي في العالم المفتوح
             sonny.x = Phaser.Math.Linear(sonny.x, player.x - 60, 0.1);
             sonny.y = Phaser.Math.Linear(sonny.y, player.y - 80, 0.1);
 
