--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Remy & Sonny - Pro Edition</title>
+    <title>Remy & Sonny - MultiTouch</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <style>
         body { margin: 0; padding: 0; overflow: hidden; background-color: #000; }
@@ -22,8 +22,9 @@
             },
             physics: {
                 default: 'arcade',
-                arcade: { gravity: { y: 1400 }, debug: false }
+                arcade: { gravity: { y: 1500 }, debug: false }
             },
+            input: { activePointers: 3 }, // تفعيل اللمس المتعدد (3 أصابع في نفس الوقت)
             scene: { preload: preload, create: create, update: update }
         };
 
@@ -49,48 +50,44 @@
             platforms = this.physics.add.staticGroup();
             boxes = this.physics.add.staticGroup();
 
-            // --- الأرضية الملونة ---
-            let groundBottom = this.add.rectangle(400, 1155, 100000, 90, 0x000000).setOrigin(0.5);
-            let groundTop = this.add.rectangle(400, 1065, 100000, 90, 0x0000ff).setOrigin(0.5);
+            // الأرضية الملونة (نرفع العمق قليلاً ولكن الأزرار ستكون أعلى منها)
+            let groundBottom = this.add.rectangle(400, 1155, 100000, 90, 0x000000).setOrigin(0.5).setDepth(1);
+            let groundTop = this.add.rectangle(400, 1065, 100000, 90, 0x0000ff).setOrigin(0.5).setDepth(2);
             
             platforms.add(groundTop);
             this.physics.add.existing(groundTop, true);
 
-            // توزيع الصناديق (بمسافات تسمح بالقفز بينها)
             for (let i = 1; i < 150; i++) {
                 let x = i * 450 + Math.random() * 200;
                 let y = 900 - Math.random() * 350;
-                boxes.create(x, y, 'box').setScale(1).refreshBody();
+                boxes.create(x, y, 'box').setScale(1).refreshBody().setDepth(3);
             }
 
-            player = this.physics.add.sprite(100, 900, 'remy').setScale(2.2).setDepth(5);
+            player = this.physics.add.sprite(100, 900, 'remy').setScale(2.2).setDepth(10);
             player.setCollideWorldBounds(true);
-            sonny = this.add.sprite(100, 850, 'sonny').setScale(1.6).setDepth(4);
+            sonny = this.add.sprite(100, 850, 'sonny').setScale(1.6).setDepth(9);
 
             this.cameras.main.startFollow(player, true, 0.1, 0.1);
             this.cameras.main.setBounds(0, 0, 100000, 1200);
 
-            scoreText = this.add.text(40, 50, 'Tokens: ' + score, { fontSize: '45px', fill: '#fff', fontStyle: 'bold' }).setScrollFactor(0).setDepth(20);
+            scoreText = this.add.text(40, 50, 'Tokens: ' + score, { fontSize: '45px', fill: '#fff' }).setScrollFactor(0).setDepth(100);
 
             this.physics.add.collider(player, platforms);
             this.physics.add.collider(player, boxes);
 
-            // --- الأزرار البيضاء (فوق كل شيء) ---
+            // --- الأزرار مع تفعيل Depth عالي جداً لضمان الظهور فوق الخط الأزرق ---
             const btnY = 1110; 
 
-            // زر اليسار أبيض شفاف
-            const leftBtn = this.add.circle(120, btnY, 75, 0xffffff, 0.3).setInteractive().setScrollFactor(0).setDepth(15);
-            this.add.text(100, btnY - 35, '<', { fontSize: '70px', fill: '#fff' }).setScrollFactor(0).setDepth(16);
+            const leftBtn = this.add.circle(120, btnY, 80, 0xffffff, 0.4).setInteractive().setScrollFactor(0).setDepth(100);
+            this.add.text(100, btnY - 35, '<', { fontSize: '70px', fill: '#000' }).setScrollFactor(0).setDepth(101);
             
-            // زر اليمين أبيض شفاف
-            const rightBtn = this.add.circle(680, btnY, 75, 0xffffff, 0.3).setInteractive().setScrollFactor(0).setDepth(15);
-            this.add.text(660, btnY - 35, '>', { fontSize: '70px', fill: '#fff' }).setScrollFactor(0).setDepth(16);
+            const rightBtn = this.add.circle(680, btnY, 80, 0xffffff, 0.4).setInteractive().setScrollFactor(0).setDepth(100);
+            this.add.text(660, btnY - 35, '>', { fontSize: '70px', fill: '#000' }).setScrollFactor(0).setDepth(101);
 
-            // زر القفز أبيض شفاف
-            const jumpBtn = this.add.rectangle(400, btnY, 280, 110, 0xffffff, 0.2).setInteractive().setScrollFactor(0).setDepth(15);
-            this.add.text(340, btnY - 25, 'JUMP', { fontSize: '40px', fill: '#fff', fontStyle: 'bold' }).setScrollFactor(0).setDepth(16);
+            const jumpBtn = this.add.rectangle(400, btnY, 280, 110, 0xffffff, 0.5).setInteractive().setScrollFactor(0).setDepth(100);
+            this.add.text(340, btnY - 25, 'JUMP', { fontSize: '40px', fill: '#000', fontStyle: 'bold' }).setScrollFactor(0).setDepth(101);
 
-            // أحداث اللمس
+            // برمجة اللمس المتعدد
             leftBtn.on('pointerdown', () => moveLeft = true);
             leftBtn.on('pointerup', () => moveLeft = false);
             leftBtn.on('pointerout', () => moveLeft = false);
@@ -102,26 +99,24 @@
             jumpBtn.on('pointerdown', () => {
                 if (player.body.touching.down) {
                     jumpCount = 1;
-                    player.setVelocityY(-700);
+                    player.setVelocityY(-750);
                 } else if (jumpCount === 1) {
                     jumpCount = 2;
-                    player.setVelocityY(-800); // قفزة مزدوجة قوية للوصول للصناديق البعيدة
+                    player.setVelocityY(-850);
                 }
             });
         }
 
         function update() {
-            // التحكم في الحركة (يدعم القفز أثناء المشي)
+            // الآن السرعة الأفقية تعمل بشكل مستقل عن القفز
             if (moveLeft) {
-                player.setVelocityX(-400);
+                player.setVelocityX(-450);
             } else if (moveRight) {
-                player.setVelocityX(400);
+                player.setVelocityX(450);
             } else {
-                // إذا لم يضغط أي زر، تتوقف السرعة الأفقية تدريجياً أو فورياً
                 player.setVelocityX(0);
             }
 
-            // سوني يتبع ريمي
             sonny.x = Phaser.Math.Linear(sonny.x, player.x - 70, 0.1);
             sonny.y = Phaser.Math.Linear(sonny.y, player.y - 110, 0.1);
 
@@ -129,4 +124,4 @@
         }
     </script>
 </body>
-    </html>
+</html>
